rust/codec-md/src/snapshots/decode_md_fragments@span.md.snap
---
source: rust/codec-md/src/decode.rs
assertion_line: 2206
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/span.md
---
[
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Span",
        "classes": [],
        "content": [
          "styled span"
        ],
        "css": "",
        "programmingLanguage": "tailwind",
        "text": "text-green-600"
      },
      " within inline content and [containing ",
      {
        "type": "Strong",
        "content": [
          "inline"
        ]
      },
      " content]{text-blue-600}."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Spans can also be styled using Tailwind classes generated by ",
      {
        "type": "Span",
        "classes": [],
        "content": [
          "code expressions"
        ],
        "css": "",
        "programmingLanguage": "python",
        "text": "\"-\".join([\"text\",\"orange\",\"700\"])"
      },
      "."
    ]
  }
]
