rust/codec-md/src/snapshots/decode_md_fragments@strikeout.md.snap
---
source: rust/codec-md/src/decode.rs
assertion_line: 1294
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/strikeout.md
---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Strikeout",
        "content": [
          "striked out"
        ]
      },
      " text."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Or ",
      {
        "type": "Strikeout",
        "content": [
          "like this"
        ]
      },
      "."
    ]
  }
]
