rust/codec-md/src/snapshots/decode_md_fragments@table.md.snap
---
source: rust/codec-md/src/decode.rs
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/table.md

---
[
  {
    "type": "Paragraph",
    "content": [
      "Regular table"
    ]
  },
  {
    "type": "Table",
    "rows": [
      {
        "type": "TableRow",
        "cells": [
          {
            "type": "TableCell",
            "cellType": "Header",
            "content": [
              "A"
            ]
          },
          {
            "type": "TableCell",
            "cellType": "Header",
            "content": [
              "B"
            ]
          },
          {
            "type": "TableCell",
            "cellType": "Header",
            "content": [
              "C"
            ]
          }
        ],
        "rowType": "Header"
      },
      {
        "type": "TableRow",
        "cells": [
          {
            "type": "TableCell",
            "content": [
              "1"
            ]
          },
          {
            "type": "TableCell",
            "content": [
              "2"
            ]
          },
          {
            "type": "TableCell",
            "content": [
              "3"
            ]
          }
        ]
      },
      {
        "type": "TableRow",
        "cells": [
          {
            "type": "TableCell",
            "content": [
              "4"
            ]
          },
          {
            "type": "TableCell",
            "content": [
              "5"
            ]
          },
          {
            "type": "TableCell",
            "content": [
              "6"
            ]
          }
        ]
      }
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Table with empty cells"
    ]
  },
  {
    "type": "Table",
    "rows": [
      {
        "type": "TableRow",
        "cells": [
          {
            "type": "TableCell",
            "cellType": "Header",
            "content": [
              "D"
            ]
          },
          {
            "type": "TableCell",
            "cellType": "Header",
            "content": [
              "E"
            ]
          }
        ],
        "rowType": "Header"
      },
      {
        "type": "TableRow",
        "cells": [
          {
            "type": "TableCell",
            "content": [
              "1"
            ]
          },
          {
            "type": "TableCell"
          }
        ]
      },
      {
        "type": "TableRow",
        "cells": [
          {
            "type": "TableCell"
          },
          {
            "type": "TableCell",
            "content": [
              "2"
            ]
          }
        ]
      }
    ]
  }
]
