rust/codec-md/src/snapshots/decode_md_fragments@underline.md.snap
---
source: rust/codec-md/src/decode.rs
assertion_line: 1294
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/underline.md
---
[
  {
    "type": "Paragraph",
    "content": [
      "Also known as ",
      {
        "type": "Underline",
        "content": [
          "underlined"
        ]
      },
      "."
    ]
  }
]
